--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hws2",
-  "homepage": "https://sergei00026.github.io/hws2",
+  "homepage": "https://sergei00026.github.io/homeWork/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
